tests/mlir/snapshots/mlir__core__assign.snap
---
source: tests/mlir/core.rs
expression: output
---
module {
  func.func @assign(%arg0: memref<16xi16, #hivm.address_space<gm>>, %arg1: memref<16xi16, #hivm.address_space<gm>>) attributes {hacc.entry, hacc.function_kind = #hacc.function_kind<DEVICE>} {
    %alloc = memref.alloc() : memref<16xi16, #hivm.address_space<ub>>
    hivm.hir.load ins(%arg0 : memref<16xi16, #hivm.address_space<gm>>) outs(%alloc : memref<16xi16, #hivm.address_space<ub>>)
    hivm.hir.store ins(%alloc : memref<16xi16, #hivm.address_space<ub>>) outs(%arg1 : memref<16xi16, #hivm.address_space<gm>>)
    return
  }
}
