tests/mlir/snapshots/mlir__core__binop.snap
---
source: tests/mlir/core.rs
assertion_line: 4
expression: output
---
module {
  func.func @main() -> i32 {
    %c10_i32 = arith.constant 10 : i32
    %c5_i32 = arith.constant 5 : i32
    %0 = arith.addi %c10_i32, %c5_i32 : i32
    %c20_i32 = arith.constant 20 : i32
    %c8_i32 = arith.constant 8 : i32
    %1 = arith.subi %c20_i32, %c8_i32 : i32
    %c6_i32 = arith.constant 6 : i32
    %c7_i32 = arith.constant 7 : i32
    %2 = arith.muli %c6_i32, %c7_i32 : i32
    %c42_i32 = arith.constant 42 : i32
    %c6_i32_0 = arith.constant 6 : i32
    %3 = arith.divsi %c42_i32, %c6_i32_0 : i32
    %c17_i32 = arith.constant 17 : i32
    %c5_i32_1 = arith.constant 5 : i32
    %4 = arith.remsi %c17_i32, %c5_i32_1 : i32
    %c15_i32 = arith.constant 15 : i32
    %c7_i32_2 = arith.constant 7 : i32
    %5 = arith.andi %c15_i32, %c7_i32_2 : i32
    %c8_i32_3 = arith.constant 8 : i32
    %c4_i32 = arith.constant 4 : i32
    %6 = arith.ori %c8_i32_3, %c4_i32 : i32
    %c4_i32_4 = arith.constant 4 : i32
    %c2_i32 = arith.constant 2 : i32
    %7 = arith.shli %c4_i32_4, %c2_i32 : i32
    %c16_i32 = arith.constant 16 : i32
    %c2_i32_5 = arith.constant 2 : i32
    %8 = arith.shrsi %c16_i32, %c2_i32_5 : i32
    %c5_i32_6 = arith.constant 5 : i32
    %c5_i32_7 = arith.constant 5 : i32
    %9 = arith.cmpi eq, %c5_i32_6, %c5_i32_7 : i32
    %c5_i32_8 = arith.constant 5 : i32
    %c3_i32 = arith.constant 3 : i32
    %10 = arith.cmpi ne, %c5_i32_8, %c3_i32 : i32
    %c3_i32_9 = arith.constant 3 : i32
    %c7_i32_10 = arith.constant 7 : i32
    %11 = arith.cmpi slt, %c3_i32_9, %c7_i32_10 : i32
    %c5_i32_11 = arith.constant 5 : i32
    %c5_i32_12 = arith.constant 5 : i32
    %12 = arith.cmpi sle, %c5_i32_11, %c5_i32_12 : i32
    %c10_i32_13 = arith.constant 10 : i32
    %c8_i32_14 = arith.constant 8 : i32
    %13 = arith.cmpi sgt, %c10_i32_13, %c8_i32_14 : i32
    %c9_i32 = arith.constant 9 : i32
    %c9_i32_15 = arith.constant 9 : i32
    %14 = arith.cmpi sge, %c9_i32, %c9_i32_15 : i32
    %15 = arith.andi %9, %10 : i1
    %16 = arith.ori %11, %12 : i1
    %17 = arith.addi %0, %2 : i32
    return %17 : i32
  }
}
