tests/mlir/snapshots/mlir__core__constant.snap
---
source: tests/mlir/core.rs
assertion_line: 4
expression: output
---
module {
  func.func @main() -> i32 {
    %c42_i32 = arith.constant 42 : i32
    return %c42_i32 : i32
  }
}
