tests/mlir/snapshots/mlir__core__core_unit.snap
---
source: tests/mlir/core.rs
assertion_line: 4
expression: output
---
module {
  func.func @main() {
    %c10_i32 = arith.constant 10 : i32
    return
  }
}
