tests/mlir/snapshots/mlir__core__cpu_memory_allocation.snap
---
source: tests/mlir/core.rs
assertion_line: 4
expression: output
---
module {
  func.func @main() {
    %alloca = memref.alloca() : memref<16xi16>
    %alloca_0 = memref.alloca() : memref<16xi16>
    %alloca_1 = memref.alloca() : memref<16xi16>
    return
  }
}
