tests/mlir/snapshots/mlir__core__func_params.snap
---
source: tests/mlir/core.rs
assertion_line: 4
expression: output
---
module {
  func.func @add(%arg0: i32, %arg1: i32) -> i32 {
    %0 = arith.addi %arg0, %arg1 : i32
    return %0 : i32
  }
  func.func @main() -> i32 {
    %c10_i32 = arith.constant 10 : i32
    %c32_i32 = arith.constant 32 : i32
    %0 = call @add(%c10_i32, %c32_i32) : (i32, i32) -> i32
    return %0 : i32
  }
}
